Bug 99097 - [vulkancts] dEQP-VK.image.store regression
Summary: [vulkancts] dEQP-VK.image.store regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Francisco Jerez
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-15 12:21 UTC by Mark Janes
Modified: 2016-12-16 22:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-12-15 12:21:07 UTC
The series ending in mesa fd3120d regressed over 50 tests:
i965/disasm: Decode dataport constant cache control fields.

For example:
dEQP-VK.image.store.1d_array.r32g32b32a32_sint_single_layer

Standard Output

Result and reference images are normalized with formula p * (0.00315457, 0.0031348, 0.0031348, 0.00315457) + (-0.00315457, 0, 0, -0.00315457)
Image comparison failed: max difference = (257, 257, 257, 257), threshold = (0, 0, 0, 0)
Result and reference images are normalized with formula p * (7.62579e-06, 7.62579e-06, 7.62579e-06, 7.62579e-06) + (0, -7.62579e-06, -7.62579e-06, 0)
Image comparison failed: max difference = (131074, 131074, 131074, 131074), threshold = (0, 0, 0, 0)
Result and reference images are normalized with formula p * (1.98682e-08, 1.98682e-08, 1.98682e-08, 1.98682e-08) + (-1.98682e-08, 0, 0, -1.98682e-08)
Image comparison failed: max difference = (50331651, 50331651, 50331651, 50331651), threshold = (0, 0, 0, 0)
Result and reference images are normalized with formula p * (0.000745712, 0.000744602, 0.000744602, 0.000745712) + (-0.000745712, 0, 0, -0.000745712)
Image comparison failed: max difference = (1285, 1285, 1285, 1285), threshold = (0, 0, 0, 0)
Result and reference images are normalized with formula p * (2.54273e-06, 2.54273e-06, 2.54273e-06, 2.54273e-06) + (0, -2.54273e-06, -2.54273e-06, 0)
Image comparison failed: max difference = (393222, 393222, 393222, 393222), threshold = (0, 0, 0, 0)
Result and reference images are normalized with formula p * (8.51494e-09, 8.51494e-09, 8.51494e-09, 8.51494e-09) + (-8.51494e-09, 0, 0, -8.51494e-09)
Image comparison failed: max difference = (117440519, 117440519, 117440519, 117440519), threshold = (0, 0, 0, 0)



Bisection underway
Comment 1 Mark Janes 2016-12-15 13:27:04 UTC
This regression starts with ad38ba113491869ab0dffed937f7b3dd50e8a735
i965/fs: Switch to the constant cache for uniform pull constants.
Comment 2 Francisco Jerez 2016-12-16 22:17:18 UTC
Should be fixed now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.